@@ -108,6 +108,9 @@ Other
 * LUCENE-6800: Use XYZSolidFactory to create XYZSolids (Karl Wright
   via Mike McCandless)
 
+* LUCENE-6798: Geo3d now models degenerate (too tiny) circles as a
+  single point (Karl Wright via Mike McCandless)
+
 Build
 
 * LUCENE-6732: Improve checker for invalid source patterns to also
